--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="container">
 
      <a class="navbar-brand" href="#">
-        <img src="logo1.0.png" alt="Logo" style="width: 70px;">
+        <img src="logo.jpg" alt="Logo" style="width: 70px;">
       </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
